finished exercise 26-10-2021 without css

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
 .header_container {
   height: 150px;
+  margin-bottom: 50px;
 }
 .header_container img {
   width: 100%;
@@ -28,4 +29,10 @@
   border-radius: 15%;
   background-color: grey;
   overflow: hidden;
+}
+
+.singolo_fumetto {
+  color: black;
+  display: block;
+  margin: 15px;
 }
