--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,3 +2,4 @@
 @import "partials/general.scss";
 @import "partials/header.scss";
 @import "partials/characters.scss";
+@import "partials/comics.scss";
