header and footer completed. Added font

--- a/resources/sass/partials/characters.scss
+++ b/resources/sass/partials/characters.scss
@@ -1,6 +1,7 @@
 .character-card{
     height: 350px;
     width: 300px;
+    margin-bottom: 20px;
     border:1px solid blue;
     border-radius: 15%;
     background-color: grey;
