--- a/resources/sass/partials/comics.scss
+++ b/resources/sass/partials/comics.scss
@@ -1,5 +1,10 @@
-.singolo_fumetto{
-    color:black;
-    display: block;
-    margin:15px;
+.comics_card{
+
+    .link_fumetto{
+        color:black;
+        display: block;
+        margin:15px;
+    }
+    
 }
+
