--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,37 +1,91 @@
-.header_container {
-  height: 150px;
-  margin-bottom: 50px;
+body {
+  font-family: "Roboto", sans-serif;
 }
-.header_container img {
-  width: 100%;
-  height: 80%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+
+.header_container {
+  height: 385px;
+  margin-bottom: 50px;
 }
 .header_container .header_menu_list {
   display: flex;
+  align-items: center;
   list-style-type: none;
+  height: 60px;
+  margin-bottom: 25px;
+}
+.header_container .header_menu_list img {
+  height: 60px;
+  margin-right: 40px;
 }
 .header_container .header_menu_list li {
-  margin-right: 15px;
+  margin-right: 25px;
 }
 .header_container .header_menu_list li a {
   color: black;
   text-decoration: none;
+  text-transform: uppercase;
+}
+.header_container .header_menu_list input {
+  border: none;
+}
+.header_container .header_menu_list .header_button {
+  border: none;
+  background-color: #0282F9;
+  color: white;
+  height: 25px;
+}
+.header_container .header_image {
+  height: 300px;
+}
+.header_container .header_image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+  width: 100%;
+  height: 100%;
+}
+
+.footer_wrapper {
+  display: flex;
+  justify-content: space-between;
+  background-image: url("../images/footer-bg.jpg");
+}
+.footer_wrapper .footer_list {
+  display: flex;
+}
+.footer_wrapper .footer_list li {
+  list-style-type: none;
+  margin-right: 20px;
+}
+.footer_wrapper .footer_list li h1 {
+  color: white;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.footer_wrapper .footer_list li p {
+  color: #959595;
+  font-size: 0.7rem;
+  line-height: 0.7rem;
+}
+.footer_wrapper .logo_footer {
+  position: absolute;
+  right: 300px;
+  height: 270px;
+  margin-top: 15px;
 }
 
 .character-card {
   height: 350px;
   width: 300px;
+  margin-bottom: 20px;
   border: 1px solid blue;
   border-radius: 15%;
   background-color: grey;
   overflow: hidden;
 }
 
-.singolo_fumetto {
+.comics_card .link_fumetto {
   color: black;
   display: block;
   margin: 15px;
