--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 //
 @import "partials/general.scss";
 @import "partials/header.scss";
+@import "partials/footer.scss";
 @import "partials/characters.scss";
 @import "partials/comics.scss";
