--- a/resources/sass/partials/header.scss
+++ b/resources/sass/partials/header.scss
@@ -1,27 +1,55 @@
 .header_container{
 
-    height: 150px;
+    height: 385px;
     margin-bottom: 50px;
 
-    img{
-        width: 100%;
-        height: 80%;
-        object-fit: cover;
-        object-position: center;
-    }
     .header_menu_list{
         display: flex;
+        align-items: center;
         list-style-type: none;
+        height: 60px;
+        margin-bottom: 25px;
+
+        img{
+            height: 60px;
+            margin-right: 40px;
+        }
         
         
         li{
-            margin-right: 15px;
+            margin-right: 25px;
 
             a{
                 color:black;
                 text-decoration: none;
+                text-transform: uppercase;
             }
         }
+
+        input{
+            border:none;
+        }
+
+        .header_button{
+            border:none;
+            background-color: #0282F9;
+            color: white;
+            height: 25px;
+        }
     }
+
+    
+    .header_image{
+        height: 300px;
+
+        img{
+            object-fit: cover;
+            object-position:top;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    
 }
 
