--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,3 +4,4 @@
 @import "partials/footer.scss";
 @import "partials/characters.scss";
 @import "partials/comics.scss";
+@import "partials/comic.scss";
