--- a/resources/sass/partials/header.scss
+++ b/resources/sass/partials/header.scss
@@ -20,7 +20,7 @@
             margin-right: 25px;
 
             a{
-                color:black;
+                color:white;
                 text-decoration: none;
                 text-transform: uppercase;
             }
