--- a/resources/sass/partials/comics.scss
+++ b/resources/sass/partials/comics.scss
@@ -1,10 +1,31 @@
-.comics_card{
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #1C1C1C;
 
-    .link_fumetto{
-        color:black;
-        display: block;
-        margin:15px;
-    }
+    .comics_card{
+
+        text-align: center;
+        width: 400px;
+        margin-bottom: 25px;
+        
+        
+            .link_fumetto{
+                color:white;
+                margin:15px;
+                text-decoration: none;
+            }
+
+            .immagine_fumetto{
+                img{
+                    width: 220px;
+                }
+            }
+        
+        }
+    
     
 }
+
+
 
