--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,3 +5,5 @@
 @import "partials/characters.scss";
 @import "partials/comics.scss";
 @import "partials/comic.scss";
+@import "partials/games.scss";
+@import "partials/game.scss";
